--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="shortcut icon"
+      href="./public/images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca:wght@400;700&family=Nunito:wght@400;700;800&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header class="wrapper">
+    <header class="header wrapper">
       <a href="/">
         <img
-          src="/assets/images/logo.svg"
+          class="header__logo"
+          src="/public/images/logo.svg"
           alt="Homepage"
           width="64"
           height="40"
@@ -18,11 +29,11 @@
       </a>
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">New</a></li>
-          <li><a href="">Popular</a></li>
-          <li><a href="">Trending</a></li>
-          <li><a href="">Categories</a></li>
+          <li><a class="header__link" href="">Home</a></li>
+          <li><a class="header__link" href="">New</a></li>
+          <li><a class="header__link" href="">Popular</a></li>
+          <li><a class="header__link" href="">Trending</a></li>
+          <li><a class="header__link" href="">Categories</a></li>
         </ul>
       </nav>
     </header>
@@ -32,14 +43,18 @@
           <picture>
             <source
               media="(min-width: 1024px)"
-              srcset="/assets/images/feature-desktop.jpg 1x,
-              assets/images/feature-desktop-2x.jpg 2x"
+              srcset="/public/images/feature-desktop.jpg 1x,
+              public/images/feature-desktop-2x.jpg 2x"
+              width="730"
+              height="300"
             />
             <img
               class="feature__image"
-              src="assets/images/feature-mobile.jpg"
+              width="343"
+              height="300"
+              src="public/images/feature-mobile.jpg"
               alt="colorful blocks"
-              srcset="assets/images/feature-mobile-2x.jpg 2x"
+              srcset="public/images/feature-mobile-2x.jpg 2x"
             />
           </picture>
           <h1 class="feature__headline">The Bright Future of Web 3.0?</h1>
@@ -48,21 +63,21 @@
             power of the platforms back into the hands of the people. But is it
             really fulfilling its promise?
           </p>
-          <a class="feature__button" href="Read more"></a>
+          <a class="feature__button" href="">Read more</a>
         </section>
         <section class="new">
-          <h2>New</h2>
+          <h2 class="new__title">New</h2>
           <article class="new__post">
-            <h3 class="new__headline">
-              <a href="">Hydrogen VS Electric Cars</a>
+            <h3>
+              <a class="new__headline" href="">Hydrogen VS Electric Cars</a>
             </h3>
             <p class="new__description">
               Will hydrogen-fueled cars ever catch up to EVs?
             </p>
           </article>
           <article class="new__post">
-            <h3 class="new__headline">
-              <a href="">The Downsides of Al Artistry</a>
+            <h3>
+              <a class="new__headline" href="">The Downsides of Al Artistry</a>
             </h3>
             <p class="new__description">
               What are the possible adverse effects of on-demand Al image
@@ -70,8 +85,8 @@
             </p>
           </article>
           <article class="new__post">
-            <h3 class="new__headline">
-              <a href="">Is VC Funding Drying Up?</a>
+            <h3>
+              <a class="new__headline " href="">Is VC Funding Drying Up?</a>
             </h3>
             <p class="new__description">
               Private funding by VC firms is down 50% YOY. We take a look at
@@ -83,7 +98,7 @@
         <section class="blog">
           <article class="blog__item">
             <img
-              src="/assets/images/image-retro-pcs.jpg"
+              src="/public/images/image-retro-pcs.jpg"
               alt="retro computer on a desk"
               class="blog__image"
             />
@@ -97,7 +112,7 @@
           </article>
           <article class="blog__item">
             <img
-              src="/assets/images/image-top-laptops.jpg"
+              src="/public/images/image-top-laptops.jpg"
               alt="keyboard with red backlighting"
               class="blog__image"
             />
@@ -111,7 +126,7 @@
           </article>
           <article class="blog__item">
             <img
-              src="/assets/images/image-gaming-growth.jpg"
+              src="/public/images/image-gaming-growth.jpg"
               alt="game controller above the hand"
               class="blog__image"
             />
