--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <main>
       <article class="wrapper grid">
         <section class="feature">
-          <picture>
+          <picture class="feature__picture">
             <source
-              media="(min-width: 1024px)"
+              media="(min-width: 43.75em)"
               srcset="/public/images/feature-desktop.jpg 1x,
               public/images/feature-desktop-2x.jpg 2x"
               width="730"
@@ -58,12 +58,14 @@
             />
           </picture>
           <h1 class="feature__headline">The Bright Future of Web 3.0?</h1>
-          <p class="feature__description">
-            We dive into the next evolution of the web that claims to put the
-            power of the platforms back into the hands of the people. But is it
-            really fulfilling its promise?
-          </p>
-          <a class="feature__button" href="">Read more</a>
+          <div class="feature__description">
+            <p>
+              We dive into the next evolution of the web that claims to put the
+              power of the platforms back into the hands of the people. But is
+              it really fulfilling its promise?
+            </p>
+            <a class="feature__button" href="">Read more</a>
+          </div>
         </section>
         <section class="new">
           <h2 class="new__title">New</h2>
