desktop header and active states

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         />
       </a>
       <nav>
-        <ul>
+        <ul class="header__links">
           <li><a class="header__link" href="">Home</a></li>
           <li><a class="header__link" href="">New</a></li>
           <li><a class="header__link" href="">Popular</a></li>
